Added consultant contract overview